--- a/src/index.html
+++ b/src/index.html
@@ -19,41 +19,52 @@
   <body>
     <div class="main">
       <div class="box">
-        <div class="logo navbar-item">
-          <i class="fa-solid fa-bomb navbar-item"></i>
-        </div>
-        <div class="field has-addons navbar-item">
-          <p class="control">
-            <input
-              class="input is-medium is-rounded"
-              type="text"
-              placeholder="Search a skill"
-            />
-          </p>
-          <p class="control">
-            <button class="button is-rounded is-medium">Search</button>
-          </p>
-        </div>
+        <nav class="navbar">
+          <ul class="navbar-item">
+            <li>
+              <div class="logo navbar-item">
+                <i class="fa-solid fa-bomb navbar-item"></i>
+              </div>
+            </li>
+            <li>
+              <div class="field has-addons navbar-item">
+                <p class="control">
+                  <input
+                          class="input is-medium is-rounded"
+                          type="text"
+                          placeholder="Search a skill"
+                  />
+                </p>
+                <p class="control">
+                  <button class="button is-rounded is-medium">Search</button>
+                </p>
+              </div>
+            </li>
+          </ul>
 
-        <a>
-          <i class="fa-solid fa-house"></i>
-        </a>
+        </nav>
+          <a>
+            <i class="fa-solid fa-house"></i>
+          </a>
 
-        <a>
-          <i class="fa-solid fa-comment-dots"></i>
-        </a>
+          <a>
+            <i class="fa-solid fa-comment-dots"></i>
+          </a>
 
-        <a>
-          <i class="fa-solid fa-suitcase"></i>
-        </a>
+          <a>
+            <i class="fa-solid fa-suitcase"></i>
+          </a>
 
-        <a>
-          <i class="fa-solid fa-bell"></i>
-        </a>
+          <a>
+            <i class="fa-solid fa-bell"></i>
+          </a>
 
-        <a>
-          <i class="fa-brands fa-discord"></i>
-        </a>
+          <a>
+            <i class="fa-brands fa-discord"></i>
+          </a>
+
+
+
       </div>
     </div>
   </body>
